# CaptureCap

./: Makefile  README.md
app/: build.gradle.kts
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/main/: AndroidManifest.xml
app/src/main/assets/: bitcoin.txt  ethereum.txt  license.txt  monero.txt
app/src/main/cpp/: CMakeLists.txt  librtmp.cmake  native_rtmp.cpp  ndk-objcopy.cmake
app/src/main/res/color/: text_color_primary_dynamic.xml  text_color_primary_dynamic_dark.xml  text_color_secondary_dynamic.xml  text_color_secondary_dynamic_dark.xml
app/src/main/res/drawable/: bg_contributor_cell.xml  bg_rounded_button.xml  bg_rounded_button_opened.xml  bg_rounded_button_panel_opened.xml  bg_rounded_button_pressed.xml  bg_setting_rounded_button.xml  bg_setting_rounded_button_checked.xml  button_background.xml  button_background_dark.xml  contributorspanel_shape.xml  floatingpanel_handle_shape.xml  floatingpanel_shape.xml  icon_back.xml  icon_back_arrow.xml  icon_back_dark.xml  icon_crop_audio_artwork.xml  icon_crop_pause.xml  icon_crop_pause_color.xml  icon_crop_play.xml  icon_crop_play_color.xml  icon_crop_selection.xml  icon_crop_selection_color.xml  icon_crop_stop.xml  icon_crop_stop_color.xml  icon_crop_zoom_in.xml  icon_crop_zoom_in_color.xml  icon_crop_zoom_out.xml  icon_crop_zoom_out_color.xml  icon_donate.xml  icon_license.xml  icon_pause_color_action.xml  (+44 more)
gradle/: libs.versions.toml
metadata/en-US/: short_description.txt
metadata/en-US/changelogs/: 30.txt  31.txt  32.txt  33.txt  34.txt
(+50 files in other folders)
